layout issues fixed

--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -31,7 +31,9 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background: rgba(245, 245, 245, 0.385);
+  background: rgba(245, 245, 245,0.7);
+  backdrop-filter: blur(20px);
+  border: 5px solid black;
   backface-visibility: hidden;
 }
 
@@ -41,4 +43,16 @@
   justify-content: center;
   backface-visibility: hidden;
   transform: rotateY(180deg);
+}
+
+@media (max-width:768px) {
+    .cards-container {
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        height: 55vh;
+        gap: 1rem;
+    }
+
+    .back>img{
+        width: 200px;
+    }
 }
